# MolSim

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: address-sanitizer.yml  clang-format-check.yml  cmake-build.yml  cmake-single-platform.yml
benchmark/: benchmark.py
cmake/modules/: doxygen.cmake  googletest.cmake  spdlog.cmake  xsd.cmake
contest/: CMakeLists.txt
contest/src/: AlignedAllocator.h  Contest.cpp  CuboidGenerator.cpp  CuboidGenerator.h  InteractiveForce.h  LennardJones.cpp  LennardJones.h  ParticleContainer.cpp  ParticleContainer.h  Simulation.cpp  Simulation.h  SingularForce.h  VTKWriter.cpp  VTKWriter.h  VerletIntegrator.cpp  VerletIntegrator.h
input/: checkpoint_membrane_test.xml  checkpoint_test.xml  cube_16k.xml  cube_1k.xml  cube_2k.xml  cube_4k.xml  cube_8k.xml  cutoff_test.xml  eingabe-sonne.txt  eingabe-sonne.xml  example_3d.xml  example_collision_3d.xml  fault2.txt  input.xsd  linkedcellstest.xml  optimization2.xml  particles.xml  task32_16k_lc.xml  task32_1k.xml  task32_1k_ds.xml  task32_1k_lc.xml  task32_2k.xml  task32_2k_ds.xml  task32_2k_lc.xml  task32_32k_lc.xml  task32_4k.xml  task32_4k_ds.xml  task32_4k_lc.xml  task32_8k.xml  task32_8k_ds.xml  task32_8k_lc.xml  task53big.xml  test.cuboid  test2.cuboid  test_3d.cuboid  test_cuboid.xml  test_cuboid_spheroid.xml  test_small.xml  testcuboid.xml  week24.xml  (+44 more)
scripts/: build  clang-format.bash  compile_xsd.bash  heatmap.py  heatmap_extended.py  input.hxx  runtime  set-input  test.txt
slides/week1/: beamercolorthemetum.sty  beamerouterthemetum.sty  main.aux  main.fdb_latexmk  main.fls  main.tex
src/: CMakeLists.txt  FileReader.cpp  FileReader.h  MolSim.cpp
src/calc/: Integrator.h  Verlet.cpp  Verlet.h  VerletIntegrator.cpp  VerletIntegrator.h
src/debug/: debug_print.h
src/defs/: CuboidGenerator.cpp  CuboidGenerator.h  Generator.cpp  Generator.h  GhostParticle.cpp  GhostParticle.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.h  Simulation.cpp  Simulation.h  Thermostat.cpp  Thermostat.h  types.h
src/defs/Generators/: CuboidGenerator.cpp  CuboidGenerator.h  MembraneGenerator.cpp  MembraneGenerator.h  ParticleGenerator.h  SpheroidGenerator.cpp  SpheroidGenerator.h
src/defs/containers/: CNPC.cpp  CNPC.h  DirectSumContainer.cpp  DirectSumContainer.h  FlattenedLinkedCellsContainer.cpp  FlattenedLinkedCellsContainer.h  LinkedCellsContainer.cpp  LinkedCellsContainer.h  ParticleContainer.h
src/forces/: BidirectionalForce.h  Force.h  Gravity.cpp  Gravity.h  HarmonicForce.cpp  HarmonicForce.h  IndexForce.cpp  IndexForce.h  InteractiveForce.h  LennardJones.cpp  LennardJones.h  LennardJonesCutoff.cpp  LennardJonesCutoff.h  SingularForce.h  SingularGravity.cpp  SingularGravity.h  TruncatedLennardJones.cpp  TruncatedLennardJones.h  force.h  gravity.cpp  gravity.h  lennardJones.cpp  lennardJones.h
src/io/: CLArgumentParser.cpp  CLArgumentParser.h
src/io/file/: CuboidReader.cpp  CuboidReader.h  DefaultReader.h  FileReader.cpp  FileReader.h
src/io/file/in/: CuboidReader.cpp  CuboidReader.h  DefaultReader.cpp  DefaultReader.h  FileReader.h  XmlReader.cpp  XmlReader.h  input-pimpl.h  input-pskel.hxx  input.cxx  input.hxx  input.xsd
src/io/file/in/xml/: XmlReader.cpp  XmlReader.h  input-pimpl.h  input-pskel.cxx  input-pskel.hxx  input.cxx  input.hxx  input.xsd
src/outputWriter/: VTKWriter.cpp  VTKWriter.h  XYZWriter.h
src/utils/: ArrayUtils.h  CuboidReader.cpp  CuboidReader.h  MaxwellBoltzmannDistribution.h  SpdWrapper.cpp  SpdWrapper.h  Statistics.h
tests/: BoundaryConditionsTest.cpp  CLArgumentParserTest.cpp  CMakeLists.txt  CNPCTest.cpp  CheckpointTest.cpp  DirectSumContainerTest.cpp  IndexForceTest.cpp  LennardJonesTest.cpp  LinkedCellsContainerTest.cpp  MembraneTest.cpp  MixingTest.cpp  ParticleContainerTest.cpp  PeriodicAndReflectiveCornerTest.cpp  PeriodicBoundary3DTest.cpp  PeriodicBoundaryTest.cpp  ReflectiveBoundaryTest.cpp  SingularGravityTest.cpp  StatisticsTest.cpp  ThermostatTest.cpp  TruncatedLennardJones.cpp  VerletIntegratorTest.cpp  WallTest.cpp  XmlReaderTest.cpp  checkpoint_input_membrane_test.xml  checkpoint_input_test.xml  checkpoint_output_membrane_test.xml  checkpoint_output_test.xml  checkpoint_test.xml  info.md  testUtil.h  test_cuboid.xml  test_cuboid_cooling.xml  test_cuboid_gradual.xml  test_cuboid_heating.xml  test_cuboid_spheroid.xml  tests.cpp
